--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
+  "homepage": "https://Ajaysdhillon.github.io/Tic-Tac-Toe-",
   "name": "tictactoe",
   "version": "0.1.0",
   "description": "",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "parcel index.html",
     "build": "npm run clear && parcel build index.html",
     "lint": "eslint src/*/.js",
@@ -15,6 +18,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "node-sass": "^6.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
